chore: add proper .gitignore (backend+frontend)